# AdventOfCode

./: .gitignore  README.md
2015/c/: CMakeLists.txt  day01.c  day02.c
2015/c/src/: day01.c  day02.c  day03.c
2015/cpp/src/: BUILD.bazel  aoc.cc  aoc.h  day01.cc  day01.cpp  day02.cc  day_01.cc
2015/zig/: build.zig  day01.zig
2015/zig/src/: day01.zig  day02.zig  day03.zig  day04.zig  day05.zig  day06.zig
2019/: README.md
2019/awk/: day01.awk
2019/go/: day01.go  day02.go  day02b.go
2019/kotlin/: day01.kt
2019/zig/: build.zig
2019/zig/src/: day01.zig
2021/kotlin/: build.gradle.kts
2021/kotlin/src/main/kotlin/com/pietromaggi/aoc2021/: Utils.kt
2021/kotlin/src/main/kotlin/com/pietromaggi/aoc2021/day04/: Day04.kt
2021/kotlin/src/main/kotlin/com/pietromaggi/aoc2021/day15/: Day15.kt
2021/kotlin/src/main/kotlin/com/pietromaggi/aoc2021/day19/: Day19.kt
2021/kotlin/src/main/kotlin/com/pietromaggi/aoc2021/day20/: Day20.kt
2021/kotlin/src/main/kotlin/com/pietromaggi/aoc2021/day21/: Day21.kt
2021/kotlin/src/main/kotlin/com/pietromaggi/aoc2021/day23/: Day23.kt
2021/kotlin/src/main/kotlin/com/pietromaggi/aoc2021/day24/: Day24.kt
2021/kotlin/src/test/kotlin/com/pietromaggi/aoc2021/day04/: Day04KtTest.kt
2021/kotlin/src/test/kotlin/com/pietromaggi/aoc2021/day23/: Day23KtTest.kt
2023/cpp/src/: day01.cc
